# notion-time-track

./: .gitignore  README.md  db_id.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: python-app.yml
client/: __main__.py
src/time_tracker/: __main__.py  app.py  config.py  config.toml  notionapi.py  time_tracker.py
tests/: conftest.py  test_app.py  test_bucket.py  test_time_parsing.py  test_time_tracker.py
time_tracker/: __init__.py  __main__.py  app.py  bucket.py  config.py  config.toml  constants.py  notionapi.py  richprinter.py  time_tracker.py  timeentry.py
