[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "time_tracker"
version = "0.0.2"
authors = [
  { name="H3isenb3rg", email="matteoe97@gmail.com" },
]
dependencies = ["appdirs==1.4.4","requests==2.28.2","toml==0.10.2"]
description = "A simple python app to insert time entries in Notion"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/H3isenb3rg/notion-time-track"
"Bug Tracker" = "https://github.com/H3isenb3rg/notion-time-track/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]