[metadata]
name = time_tracker
description = Add time entries to time track db on Notion using Notion APIs
author = Matteo Beatrice
platforms = win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    time_tracker
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.package_data]
time_tracker = py.typed

[flake8]
max-line-length = 160
extend-ignore = E401